# 00-data-structures-algorithms

./: .cursorignore  .gitignore  README.md
01-two-pointers/: README.md  questions.md
01-two-pointers/solutions/: 01_two_sum_ii.cpp  02_valid_palindrome.cpp  03_remove_duplicates.cpp  04_move_zeroes.cpp  05_squares_sorted_array.cpp  06_three_sum.cpp  07_three_sum_closest.cpp  08_container_with_most_water.cpp  09_sort_colors.cpp  10_four_sum.cpp  11_remove_nth_node.cpp  12_trapping_rain_water.cpp  CMakeLists.txt  README.md
02-sliding-window/: README.md  questions.md
02-sliding-window/solutions/: 01_max_average_subarray.cpp  02_minimum_recolors.cpp  03_longest_substring_without_repeating.cpp  04_longest_repeating_char_replacement.cpp  05_permutation_in_string.cpp  06_find_all_anagrams.cpp  07_max_consecutive_ones_iii.cpp  08_fruit_into_baskets.cpp  09_subarray_product_less_than_k.cpp  10_minimum_size_subarray_sum.cpp  11_minimum_window_substring.cpp  12_sliding_window_maximum.cpp  13_substring_concatenation.cpp  CMakeLists.txt
03-fast-slow-pointers/: README.md  questions.md
03-fast-slow-pointers/solutions/: 01_linked_list_cycle.cpp  02_middle_of_linked_list.cpp  03_happy_number.cpp  04_linked_list_cycle_ii.cpp  05_palindrome_linked_list.cpp  06_reorder_list.cpp  07_find_duplicate_number.cpp  08_circular_array_loop.cpp  CMakeLists.txt
04-binary-search/: README.md  questions.md
04-binary-search/solutions/: 01_binary_search.cpp  02_search_insert_position.cpp  03_first_bad_version.cpp  04_sqrt.cpp  05_search_rotated_sorted_array.cpp  06_find_first_and_last_position.cpp  07_find_peak_element.cpp  08_search_2d_matrix.cpp  09_find_min_rotated_sorted_array.cpp  10_koko_eating_bananas.cpp  11_capacity_to_ship_packages.cpp  12_median_of_two_sorted_arrays.cpp  13_split_array_largest_sum.cpp  CMakeLists.txt  README.md
05-merge-intervals/: README.md  questions.md
05-merge-intervals/solutions/: 01_meeting_rooms.cpp  02_merge_intervals.cpp  03_insert_interval.cpp  04_non_overlapping_intervals.cpp  05_meeting_rooms_ii.cpp  06_interval_list_intersections.cpp  07_minimum_arrows.cpp  08_employee_free_time.cpp  CMakeLists.txt
06-cyclic-sort/: README.md  questions.md
06-cyclic-sort/solutions/: 01_missing_number.cpp  02_find_disappeared_numbers.cpp  03_find_duplicate.cpp  04_find_all_duplicates.cpp  05_set_mismatch.cpp  06_first_missing_positive.cpp  CMakeLists.txt
07-tree-bfs/: README.md  questions.md
07-tree-bfs/solutions/: 01_level_order_traversal.cpp  02_level_order_traversal_ii.cpp  03_zigzag_level_order.cpp  04_average_of_levels.cpp  05_min_depth.cpp  06_right_side_view.cpp  07_populating_next_right_pointers.cpp  08_cousins_in_binary_tree.cpp  CMakeLists.txt
08-tree-dfs/: README.md  questions.md
08-tree-dfs/solutions/: 01_max_depth.cpp  02_same_tree.cpp  03_invert_tree.cpp  04_path_sum.cpp  05_path_sum_ii.cpp  06_sum_root_to_leaf.cpp  07_diameter.cpp  08_binary_tree_max_path_sum.cpp  09_lowest_common_ancestor.cpp  10_validate_bst.cpp  11_serialize_deserialize.cpp  CMakeLists.txt
09-subsets/: README.md  questions.md
09-subsets/solutions/: 01_subsets.cpp  02_subsets_with_dup.cpp  03_permutations.cpp  04_permutations_ii.cpp  05_combinations.cpp  06_combination_sum.cpp  07_combination_sum_ii.cpp  08_letter_combinations.cpp  09_generate_parentheses.cpp  CMakeLists.txt
10-dynamic-programming/: README.md  questions.md
10-dynamic-programming/solutions/: 01_climbing_stairs.cpp  02_house_robber.cpp  03_house_robber_ii.cpp  04_min_cost_climbing_stairs.cpp  05_coin_change.cpp  06_coin_change_ii.cpp  07_longest_increasing_subsequence.cpp  08_longest_common_subsequence.cpp  09_unique_paths.cpp  10_unique_paths_ii.cpp  11_minimum_path_sum.cpp  12_word_break.cpp  13_palindromic_substrings.cpp  14_longest_palindromic_substring.cpp  15_edit_distance.cpp  16_partition_equal_subset_sum.cpp  17_target_sum.cpp  18_decode_ways.cpp  19_maximal_square.cpp  20_burst_balloons.cpp  CMakeLists.txt
11-backtracking/: README.md  questions.md
11-backtracking/solutions/: 01_n_queens.cpp  02_n_queens_ii.cpp  03_sudoku_solver.cpp  04_word_search.cpp  05_palindrome_partitioning.cpp  06_restore_ip_addresses.cpp  07_combination_sum_iii.cpp  CMakeLists.txt
12-graph-traversal/: README.md  questions.md
12-graph-traversal/solutions/: 01_number_of_islands.cpp  02_clone_graph.cpp  03_pacific_atlantic.cpp  04_rotting_oranges.cpp  05_word_ladder.cpp  06_course_schedule.cpp  07_graph_valid_tree.cpp  08_connected_components.cpp  CMakeLists.txt
13-topological-sort/solutions/: 01_course_schedule.cpp  02_course_schedule_ii.cpp  03_alien_dictionary.cpp  04_minimum_height_trees.cpp  05_sequence_reconstruction.cpp  CMakeLists.txt
14-union-find/solutions/: 01_number_of_provinces.cpp  02_redundant_connection.cpp  03_connected_components.cpp  04_graph_valid_tree.cpp  05_accounts_merge.cpp  06_longest_consecutive_sequence.cpp  CMakeLists.txt
15-heaps-top-k/solutions/: 01_kth_largest.cpp  02_top_k_frequent.cpp  03_k_closest_points.cpp  04_merge_k_sorted_lists.cpp  05_find_median_data_stream.cpp  06_task_scheduler.cpp  07_reorganize_string.cpp  CMakeLists.txt
16-monotonic-stack/solutions/: 01_daily_temperatures.cpp  02_next_greater_element_i.cpp  03_next_greater_element_ii.cpp  04_largest_rectangle_histogram.cpp  05_trapping_rain_water.cpp  06_online_stock_span.cpp  CMakeLists.txt
17-trie/solutions/: 01_implement_trie.cpp  02_add_search_words.cpp  03_word_search_ii.cpp  04_replace_words.cpp  CMakeLists.txt
18-bit-manipulation/solutions/: 01_single_number.cpp  02_number_of_1_bits.cpp  03_counting_bits.cpp  04_reverse_bits.cpp  05_missing_number.cpp  06_sum_of_two_integers.cpp  07_single_number_ii.cpp  08_single_number_iii.cpp  CMakeLists.txt
19-greedy/solutions/: 01_best_time_to_buy_sell_ii.cpp  02_jump_game.cpp  03_jump_game_ii.cpp  04_gas_station.cpp  05_partition_labels.cpp  06_candy.cpp  CMakeLists.txt
20-design/solutions/: 01_min_stack.cpp  02_lru_cache.cpp  03_queue_using_stacks.cpp  04_design_twitter.cpp  05_circular_queue.cpp  06_design_hashmap.cpp  07_lfu_cache.cpp  CMakeLists.txt
(+16 files in other folders)
